# aiserver

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.agents/docs/: ai_architect.md  deployment.md  logging.md  service_overview.md  testing.md
.agents/docs/api/: common.md  images-analyze.md  images-process.md  images-v2-process-edit.md
.github/workflows/: cicd.yml
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py  images.py  schemas.py
app/core/: __init__.py  config.py  errors.py  http.py  logging.py
app/services/: __init__.py  faceshield.py  gemini_analyzer.py  image_codec.py  image_gateway.py  image_processing.py  prompt_image_editor.py  risk_policy.py
deploy/: ec2-deploy.sh
infra/: bootstrap-aws.sh  bootstrap-ec2.sh
tests/: test_faceshield.py  test_gemini_analyzer.py  test_health.py  test_image_codec.py  test_image_gateway.py  test_image_processing.py  test_images_api.py  test_logging.py  test_prompt_image_editor.py  test_risk_policy.py  test_schemas.py
