[project]
name = "aiserver"
version = "0.1.0"
description = "FastAPI server for Tech4Good"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard]>=0.116,<1",
    "google-genai>=1,<2",
    "httpx>=0.27,<1",
    "numpy>=2,<3",
    "opencv-python-headless>=4.10,<5",
    "pillow>=11,<13",
]

[dependency-groups]
dev = [
    "httpx2>=2.7,<3",
    "pytest>=8,<10",
    "pytest-cov>=6,<8",
    "ruff>=0.12,<1",
]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
